--- a/TUW System/Resource1.resx
+++ b/TUW System/Resource1.resx
@@ -250,4 +250,10 @@
   <data name="document_delete3_16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\document-delete3_16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ExportAccount" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\ExportAccount.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Cheque" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Cheque.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
