--- a/TUW System/Resource1.resx
+++ b/TUW System/Resource1.resx
@@ -256,4 +256,7 @@
   <data name="exporttocsv_32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\exporttocsv_32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Tx40_32512" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Tx40_32512.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
