-calseiban เสร็จแร้ว -แก้พี่อ๋อย ไม่ให้ delete แต่เป็น update sysdelete=1 ตัวที่ลบทิ้ง

--- a/TUW System/mdiMain.resx
+++ b/TUW System/mdiMain.resx
@@ -386,6 +386,57 @@
         //8AAAAAAAD//wAAAAAAAP//AAAAAAAA//8=
 </value>
   </data>
+  <data name="bbiCalSeiban.Glyph" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAAnjSURBVFhHtVYJWJTVGobBhUVEwJB9FWTYYViGUfZNEGQb
+        RkQRQRMUl7waFdiDJiVl2W2BFArJSJ/K8qpx06ey5RokGi4oCijKclGWBGRYZoaZ935nRGOM292e+z/P
+        O+c/5z/nvO95v++cOWoA/m9QKBRqY2Nj06RSCWeq7wxTNv4vGBoa4lxtaDAtLy+LWL8htyAtffWnK9Iz
+        DlZVVQXIZDL1J/urVP5bDA8Pc+rOnbMqLi5eHrc04QN+YERjSGzasGhdATbuKsO24kp4+AY0VVd/6fTk
+        WJXKf4r29vY5FRUfRCcLRe8xgoDoVJlw3Q5kbN+H9K1vQJizG/FZO7CpqBIrNu5Efn7BMywsk+dQqfw7
+        IBvVamtrrfPy8jb5CQJ/9BBEDkeJciFa/xKE2S8hbnU+otO2ITL1GUSKNiNcmEv1P2F57ktIES17TSaT
+        qsynUvkjkM3qP50965Sdk7Ob68q77r4wRh6VugVLM/MRs/JZRC7bQmQbEZa8HiGJ2QiKX4vAuCwsislA
+        0NI1SF6bj8QkYalUIlHJAxWSqcBWXFNT4yRMSdk7n+t+x80/GmHCDYiiFbLVMbLg+Kcfki1ZjYXR6RAs
+        XgG/iFT4hqXAOzgJvqFCxK3aDqFoeZVEorojVMgmQy6Xq/1MVq/Lzt5l7+jW6sgLQUBsJhHmIJBWFDBB
+        5h+1AvzI5fANF8ErKAHOPuGwdfaDvdtCuPIXw8UvUolIClNi8rKTIyMj0yfzqJA+Qltbm35BQUGOjd2C
+        K7ZOfvALT6XVZdDKVoIf8ZDMJyQZvOBEeCyKA9c7DPNdBXD1DcPilLUQrd0Orqc/TKwcle12LnwExa2G
+        l6/gx46OjlmTuVSISZ1GZWVlmB9fcMrUmitlk/tFLIMPWcjIvALjiTAWLAxccsTW2R8L3PkIi1qC7E1b
+        8ULRPuTtKceLJcexu/wr2Dh6guaBqY0TvEMS4ekjaLhz547RZM7HL42NjaYZGav3zDOz7rV3WzRBFgd3
+        QQxZGQVn3wglKVuNNdcHXv7BWCMKxIHng/F1STx+qkjEmfcW41hxEPbnBePAG3mIjAzHbEMT6BuZK8c6
+        OHt21J2vs1MRIJVKNT6qqopwdfM4a2zpqHDyCVPGzMk7FI5ewXDwCIA92Wi1wAtWDh5KB0QrM1GeH4qG
+        z9MxcGsvpENvQyFjeBNS8asYbC/ErW+fxtFCHlL4ujDUnw0zOzeYWtn3V1dX+6oI6OzsmOvs7FJjZOGA
+        BZ5BsHdfqFylrZMPrB15SlIGV78I2mI5EGXkoOI5X3SeK4BivILmeJOwl/DaRMnwOuEtSAbfRlN1JnaJ
+        DMG1NYahiY20vKwsgT6qOlBaWppmbGbZY2brDAt7d5jbuihjZ2zpgHnm8+EZEIvQpByExmdhTzYPHbUH
+        AEU3jWcCJhNPAUUJui+/gLLN9nCwNEDec8+rnIbKn/HxcfXCwsJMLR3d+4bGlphrYgUDitucuabQM5in
+        jJ8vZb8oLhA/V2ZALhuhYfQofiAU08u/EEFu9F0vwN6Mp7AmLf4dqVSmKoBhcHBQIzc3N0dbR7dfZ7Y+
+        tGbpYabWLOjo6tOeFlAyLkHhKiea6K/UfeKRNwCyV0jEEaq8TfgjIX9GW81aVBX4f/egv+fxVnwsgKGl
+        pcXAx8fnmDqHoyQ3NLaiXPBV5oabFx8fPucH6YNO6jrxyFsACeWAooveD1O5hxpfJbAcYFAVIZe9joZP
+        QsWtZ/YJoZD/JoD9q+3cuXMFj8c7PUtXT8ysN7dzhQ3XmxLRW7kD3Fwc8eVr0ZTpwzREQaBHfpcEnKAX
+        KTlxEop+EYaue2HwegjGxduonRE/coUJ+gGDnYdRVxrw7Wh/hx41qClvLbt3705RU1Mb0Sa7jczslAnI
+        TjETywXKRDQydwB3vjlO7Ysl0jEaxwQwyKh4QCU9I1/g3mkdvJs1DfmJmvjuTSMM391CH8oITMQ7hB5a
+        +DiufZ473FH7fhQ1PHSgubnZMDQ0rExTe/Y4Sz4G/afMoE9OzJlrAj06TCxNDfBFUSDx9xCphIaNEx45
+        0QfFyEVcKPcG30EbM7XnINhxOn4ojYJc0kQdSgn7CQOsN+5d+QuuHM4sVshlv+XAzZs39UnEwekzNBVa
+        OnrQ0pkNTQZtXWU+6M3SxHsb50N6/xdA/BUw/L1yMqULQ1WkpxPNX7+OJB4HapzpmDFjJnYkG2LwFgvR
+        KRJ5kErmHg3tvYX6g8JTkgfd2o8FMFASGnt5eX2ppq4ODkeDwAFLSHV1DjjUtjVGBwM3PgD6yNK7W2nS
+        fiLuBXop3pJzGG0tx/Ht6ghw1IKpiTF2JGph4Nxi6vcT4TxRMMf6IRu5jUuH0q6Iu5tMVAQwnDlzhmtu
+        bn6ZcoICpIogBzXcOJZO5PnALQrhrySmvxLoEJKol8nb7RB/Y4XaIg1UbZiJX/ZyILvGp4UfIgGUsIpR
+        Kk9TGKtw9ZM1reLuG7a/E8Cwf//+OC0trftPCtAnww5ts4GkeRPQHAjcjARaY4DbS4C2eKAzmcQkQXHZ
+        F9LvrSCvdwW6VwGDJFhylty6TeUByMU70HAk9ra4u3lqAfS3PC09Pb2YSOWTBbBwJPnMQMvJFeQArfq6
+        gIQEkZBwEkJW36Fd0k5H/d9FQFcqkZNbPZnkzjrKG9oNY99SWYixe+tR/77gwnDf7aemFMBQX19vZmFh
+        UceINaZNVyajrr4RbKwt8e6G+ei/uBloCgGu+QE3AkgIvd+MmBASR04kPhRyN41CQ0L6qP/ATnJjE369
+        lICLHya+Py4d0ZiSnIGdD0VFRWkzZmqOGBhZKM8F9u9o7xGImDA+Tr7Cx/C1DUCjP3CV97BsmhByi0Jz
+        m0LTxoQk/SaEwqHozULjEbfRO38rIYVk7JPEk9Hd3a3r70+3IxsX5YWEXVL8o9IQlJCNrOWLUb3HGw+u
+        PE3ki4Ar7iTEh8LChFB+tIROCGH5sfShkLvL0VsbhfOlAcfpJJzNOKYknoySkhKhidWC0YDY1YgQbVJe
+        vz0DE2Dt4Nb1bLrg8M/v8K/e/TEd8huUhFe9gQYPCgsTQvnBHGkhR1pJSHsS+i8k4Nxbzo09jac9H83/
+        O8InQQeUgYs7ryaYbsMLY1bBzonXHZ+Q+O7x48e9Bgf6p/U1fcO9UB5XeflQ+GBPzUpIGlOhaCbrW6Ip
+        J+KgaF2G0aYstJ2KR12JoK6z7qNFiok/IgYVsqnAruebt2x51sKWez84JPzI0aNHBWKxWGNyH8lQj2ZH
+        bUX45Y8zS+orYi41HF7S23widYR2y2jDx0v6zu8PvXD1s40vDrRfsJw8jkGl8s9A1/R5J06cCOnq6tKZ
+        6vsjyGVj6uJ7N0zuXT7m31X/aTwhoeviZwsHOy8Zs3P/92Og9g8cyFy+g5KYoAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <metadata name="galleryDropDown1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>677, 17</value>
+  </metadata>
   <metadata name="applicationMenu1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>134, 17</value>
   </metadata>
